overflow issue fixed

--- a/_assets/css/custom/_touchpoints.scss
+++ b/_assets/css/custom/_touchpoints.scss
@@ -14,6 +14,7 @@
   border: none;
   margin: 0px;
   max-width: 100%;
+  overflow-x: visible !important;
 }
 
 #fba-modal-dialog .wrapper {
